Added view for liking photos

--- a/templates/profile_photos.html
+++ b/templates/profile_photos.html
@@ -4,6 +4,11 @@
 
 {% block body %}
     {% for photo in photos %}
-        <img src="{{ photo.photo_link() }}" alt="">
+        <div>
+            <img src="{{ photo.photo_link() }}" alt="">
+            <form action="{{ photo.like_link() }}" method="post">
+                <input type="submit" value="{{ photo.likes|length or 0 }}">
+            </form>
+        </div>
     {% endfor %}
 {% endblock %}
