--- a/templates/photo_detail.html
+++ b/templates/photo_detail.html
@@ -13,5 +13,10 @@
                 <li>{{ comment.user.email }}: {{ comment.content }}</li>
             {% endfor %}
         </ul>
+
+        <form action="{{ photo.comment_link() }}" method="post">
+            <input type="text" name="content">
+            <input type="submit">
+        </form>
     </div>
 {% endblock %}
