User login & registration views refactoring

--- a/templates/login.html
+++ b/templates/login.html
@@ -1,18 +1,16 @@
 {% extends 'base.html' %}
 
+{% from 'macros/_formhelpers.html' import render_field %}
+
 {% block title %}Login{% endblock %}
 
 {% block body %}
     <form action="" method="post">
-        <label>
-            <span>E-mail</span>
-            <input type="email" name="email">
-        </label>
+        {{ form.csrf_token }}
 
-        <label>
-            <span>Password</span>
-            <input type="password" name="password">
-        </label>
+        {{ render_field(form.email) }}
+
+        {{ render_field(form.password) }}
 
         <input type="submit" value="Login">
     </form>
