--- a/templates/registration.html
+++ b/templates/registration.html
@@ -1,18 +1,16 @@
 {% extends 'base.html' %}
 
+{% from 'macros/_formhelpers.html' import render_field %}
+
 {% block title %}Registration{% endblock %}
 
 {% block body %}
     <form action="" method="post">
-        <label>
-            <span>E-mail</span>
-            <input type="email" name="email">
-        </label>
+        {{ render_field(form.email) }}
 
-        <label>
-            <span>Password</span>
-            <input type="password" name="password">
-        </label>
+        {{ render_field(form.password) }}
+
+        {{ render_field(form.confirm) }}
 
         <input type="submit" value="Register">
     </form>
