--- a/templates/login.html
+++ b/templates/login.html
@@ -14,4 +14,14 @@
 
         <input type="submit" value="Login">
     </form>
+
+    {% with messages = get_flashed_messages() %}
+        {% if messages %}
+            <ul>
+                {% for message in messages %}
+                    <li>{{ message }}</li>
+                {% endfor %}
+            </ul>
+        {% endif %}
+    {% endwith %}
 {% endblock %}
