--- a/templates/upload_photo.html
+++ b/templates/upload_photo.html
@@ -1,10 +1,13 @@
 {% extends 'base.html' %}
 
+{% from 'macros/_formhelpers.html' import render_field %}
+
 {% block title %}Upload Photo{% endblock %}
 
 {% block body %}
     <form method="post" enctype="multipart/form-data">
-        <input type="file" name="photo">
+        {{ render_field(form.photo) }}
+
         <input type="submit">
     </form>
 {% endblock %}
