--- a/source/instaclone/applications/photos/templates/photos/upload_photo.html
+++ b/source/instaclone/applications/photos/templates/photos/upload_photo.html
@@ -6,6 +6,8 @@
 
 {% block body %}
     <form method="post" enctype="multipart/form-data">
+        {{ form.csrf_token }}
+
         {{ render_field(form.photo) }}
 
         <input type="submit">
